mudei os tres codigos

--- a/index.html
+++ b/index.html
@@ -139,29 +139,20 @@
     </section>
 
     <!-- CONTACT -->
-    <section class="section contact">
-      <div class="container contact-inner">
-        <h2>Pronto para transformar sua gestão fiscal?</h2>
-        <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
+    <section class="contato-final">
+  <h2>Pronto para transformar sua gestão fiscal?</h2>
+  <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
 
-        <div class="grid two">
-          <div class="contact-card" id="contactWa">
-            <div class="contact-icon">💬</div>
-            <h3>WhatsApp</h3>
-            <p>Fale conosco agora mesmo</p>
-            <p class="contact-phone">+55 (45) 99818-1217</p>
-          </div>
+  <div class="botoes-contato">
+    <a href="https://wa.me/5545998181217" target="_blank" class="botao-contato whatsapp">
+      💬 WhatsApp
+    </a>
 
-          <div class="contact-card" id="contactEmail">
-            <div class="contact-icon">✉️</div>
-            <h3>Email</h3>
-            <p>Envie sua mensagem</p>
-            <p class="contact-phone">DValle.comercial@gmail.com</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
+    <a href="mailto:DValle.comercial@gmail.com" class="botao-contato email">
+      ✉️ Email
+    </a>
+  </div>
+</section>
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-inner">
