--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+HTML: 
+html:  
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -6,7 +8,6 @@
   <title>DValle — Soluções Integradas</title>
   <link rel="icon" href="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/690627228445d69f02de50e0/a56dff09c_logoDvallepng.png" />
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
   <div id="app" class="light">
@@ -140,20 +141,29 @@
     </section>
 
     <!-- CONTACT -->
-    <section class="contato-final">
-  <h2>Pronto para transformar sua gestão fiscal?</h2>
-  <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
+    <section class="section contact">
+      <div class="container contact-inner">
+        <h2>Pronto para transformar sua gestão fiscal?</h2>
+        <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
 
-  <div class="botoes-contato">
-    <a href="https://wa.me/5545998181217" target="_blank" class="botao-contato whatsapp">
-      💬 WhatsApp
-    </a>
+        <div class="grid two">
+          <div class="contact-card" id="contactWa">
+            <div class="contact-icon">💬</div>
+            <h3>WhatsApp</h3>
+            <p>Fale conosco agora mesmo</p>
+            <p class="contact-phone">+55 (45) 99818-1217</p>
+          </div>
 
-    <a href="mailto:DValle.comercial@gmail.com" class="botao-contato email">
-      ✉️ Email
-    </a>
-  </div>
-</section>
+          <div class="contact-card" id="contactEmail">
+            <div class="contact-icon">✉️</div>
+            <h3>Email</h3>
+            <p>Envie sua mensagem</p>
+            <p class="contact-phone">DValle.comercial@gmail.com</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-inner">
