tomara que funcione

--- a/index.html
+++ b/index.html
@@ -1,107 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DValle Assessoria Contábil</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-  </head>
 
-  <body class="light" id="app">
-    <header>
-      <div class="logo">
-        <img src="DValleLogo.png" alt="DValle Logo" />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DValle Assessoria Contábil</title>
+  <link rel="icon"
+    href="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/690627228445d69f02de50e0/a56dff09c_logoDvallepng.png" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
 
-      <div class="header-right">
-        <div class="contact-buttons">
-          <button id="waBtn">
-            <i class="fa-brands fa-whatsapp"></i> WhatsApp
-          </button>
-          <button id="emailBtn">
-            <i class="fa-solid fa-envelope"></i> Email
-          </button>
-        </div>
+<body class="light" id="app">
+  <header>
+    <div class="logo">
+      <img src="DValleLogo.png" alt="DValle Logo" />
+    </div>
 
-        <button id="themeToggle" aria-label="Alternar tema">
-          <i id="iconMoon" class="fa-solid fa-moon"></i>
-          <i id="iconSun" class="fa-solid fa-sun hidden"></i>
+    <div class="header-right">
+      <div class="contact-buttons">
+        <button id="waBtn">
+          <i class="fa-brands fa-whatsapp"></i> WhatsApp
+        </button>
+        <button id="emailBtn">
+          <i class="fa-solid fa-envelope"></i> Email
         </button>
       </div>
-    </header>
 
-    <main>
-      <section class="intro reveal">
-        <h1>Simplifique sua contabilidade com a DValle</h1>
-        <p>
-          Oferecemos soluções contábeis completas para otimizar sua gestão
-          fiscal e empresarial.
-        </p>
-        <div class="cta">
-          <button id="ctaWa">
-            <i class="fa-brands fa-whatsapp"></i> Fale conosco
-          </button>
-          <button id="ctaSolutions">
-            <i class="fa-solid fa-briefcase"></i> Nossas soluções
-          </button>
+      <button id="themeToggle" aria-label="Alternar tema">
+        <i id="iconMoon" class="fa-solid fa-moon"></i>
+        <i id="iconSun" class="fa-solid fa-sun hidden"></i>
+      </button>
+    </div>
+  </header>
+
+  <main>
+    <section class="intro reveal">
+      <h1>Soluções Integradas para seu negócio</h1>
+      <p>
+        Transforme a gestão fiscal da sua empresa com tecnologia de ponta, integração completa e suporte especializado.
+      </p>
+      <div class="cta">
+        <button id="ctaWa">
+          <i class="fa-brands fa-whatsapp"></i> Fale conosco
+        </button>
+        <button id="ctaSolutions">
+          <i class="fa-solid fa-briefcase"></i> Nossas soluções
+        </button>
+      </div>
+    </section>
+
+    <section id="solutions" class="solutions reveal">
+      <h2>Nossas Soluções</h2>
+
+      <div id="solutionsGrid" class="grid">
+        <div class="card">
+          <i class="fa-solid fa-building"></i>
+          <h3>Conformidade Fiscal</h3>
+          <p>
+           Mantenha-se 100% em conformidade com as legislações fiscais brasileiras automaticamente.
+          </p>
         </div>
-      </section>
 
-      <section id="solutions" class="solutions reveal">
-        <h2>Nossas Soluções</h2>
-
-        <div id="solutionsGrid" class="grid">
-          <div class="card">
-            <i class="fa-solid fa-building"></i>
-            <h3>Contabilidade Empresarial</h3>
-            <p>
-              Gestão completa das obrigações fiscais e contábeis da sua empresa.
-            </p>
-          </div>
-
-          <div class="card">
-            <i class="fa-solid fa-file-invoice-dollar"></i>
-            <h3>Declarações Fiscais</h3>
-            <p>Elaboração e envio de declarações obrigatórias sem complicações.</p>
-          </div>
-
-          <div class="card">
-            <i class="fa-solid fa-chart-line"></i>
-            <h3>Consultoria Tributária</h3>
-            <p>Reduza custos e aumente a eficiência tributária com especialistas.</p>
-          </div>
-
-          <div class="card">
-            <i class="fa-solid fa-user-tie"></i>
-            <h3>Gestão de Folha</h3>
-            <p>Administração completa de folha de pagamento e obrigações sociais.</p>
-          </div>
+        <div class="card">
+          <i class="fa-solid fa-file-invoice-dollar"></i>
+          <h3>Emissão de Notas Fiscais</h3>
+          <p>Emita notas fiscais eletrônicas de forma rápida, simples e totalmente integrada ao seu sistema.</p>
         </div>
-      </section>
 
-      <section class="cta-final reveal">
-        <h2>Pronto para transformar sua gestão fiscal?</h2>
-        <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
-
-        <div class="cta">
-          <button id="footerWa">
-            <i class="fa-brands fa-whatsapp"></i> WhatsApp
-          </button>
-          <button id="footerEmail">
-            <i class="fa-solid fa-envelope"></i> Email
-          </button>
+        <div class="card">
+          <i class="fa-solid fa-chart-line"></i>
+          <h3>Cabeçalho de Estoque</h3>
+          <p>Reduza custos e aumente a eficiência, gerencie seu estoque de forma eficiente com controle completo de entradas, saídas e inventário.</p>
         </div>
-      </section>
-    </main>
 
-    <footer>
-      <p>© 2025 DValle Assessoria Contábil. Todos os direitos reservados.</p>
-    </footer>
+        <div class="card">
+          <i class="fa-solid fa-user-tie"></i>
+          <h3>Gestão de Folha</h3>
+          <p>Administração completa de folha de pagamento e obrigações sociais.</p>
+        </div>
+      </div>
+    </section>
 
-    <script src="script.js"></script>
-  </body>
+    <section class="cta-final reveal">
+      <h2>Pronto para transformar sua gestão fiscal?</h2>
+      <p>Entre em contato conosco e descubra como a DValle pode ajudar sua empresa</p>
+
+      <div class="cta">
+        <button id="footerWa">
+          <i class="fa-brands fa-whatsapp"></i> WhatsApp
+        </button>
+        <button id="footerEmail">
+          <i class="fa-solid fa-envelope"></i> Email
+        </button>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 DValle Assessoria Contábil. Todos os direitos reservados.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
