--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body class="light" id="app">
   <header>
     <div class="logo">
-      <img src="DValleLogo.png" alt="DValle Logo" />
+     <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/690627228445d69f02de50e0/a56dff09c_logoDvallepng.png"
+               alt="DValle Sistemas" class="logo" />
+
     </div>
 
     <div class="header-right">
